# job-email-classifier

./: .env.example  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  SETUP.md  app.py  background.py  classifier.py  gmail_client.py  pyproject.toml  requirements.txt  run.sh  setup.py  test_setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
